adding test files and azure-pipelines

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Home Page</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple website created using Flask.</p>
+    <h1>Welcome to Home Page</h1>
+    <p>This is the home page of our Flask application.</p>
 </body>
 </html>
